[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.21.0", features = ["wgpu"] }
wgpu = "0.15.1"
image = { version = "0.24", features = ["png"] }
bytemuck = "1.13.0"
egui-wgpu = "0.21.0"
cgmath = "0.18.0"
